--- a/Pages.html
+++ b/Pages.html
@@ -61,7 +61,7 @@
             display: block;
         }
     </style>
-                        <a href="menu.html" class="nav-item nav-link">Menu</a>
+                        <a href="index.html" class="nav-item nav-link">Menu</a>
                       <a href="Pages.html" class="nav-item nav-link active">Pages</a> 
 </head>
 <body>
